# airpyano-core

./: pyproject.toml
src/airpyano/core/: sounds_interface.py
src/airpyano/scripts/: list_sounds.py  pyano.py
src/airpyano/sounds/beet_box/: __init__.py  beet_box.py  beet_box_interface.py
tests/: test_sound.py
