[tool.poetry]
name = "airpyano"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airpyano", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
