[tool.poetry]
name = "airpyano-core"
version = "0.1.0"
description = ""
authors = ["Matteo Angeloni <mattange@gmail.com>"]
readme = "README.md"
packages = [{include = "airpyano", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
