[tool.poetry]
name = "airpyano"
version = "0.1.0"
description = "Package for AirPyano"
authors = ["Matteo Angeloni <mattange@gmail.com>"]
readme = "README.md"
packages = [{include = "airpyano", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"
pygame = "^2.5.2"
rpi-gpio = "^0.7.1"
lgpio = "^0.2.2.0"
pigpio = "^1.78"

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
list_sounds = "airpyano.scripts.list_sounds:main"
pyano = "airpyano.scripts.pyano:main" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
